--- a/src/components/home/slideshow/slideshow.css
+++ b/src/components/home/slideshow/slideshow.css
@@ -1,9 +1,10 @@
-.slideshow-container {
-  max-height: 100vh;
-  width: 100%;
-}
 .slideshow__images__div{
-  max-height: calc(100vh - 46px)
+  height: calc(100vh - 33px)
+}
+
+.slideshow__images__div img{
+  height: calc(100vh - 33px)
+
 }
 .slick-dots {
   position: absolute;
@@ -31,4 +32,36 @@
 
 .slick-dots li.slick-active button:before {
   opacity: 1;
+}
+
+.slideshow__text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 3rem;
+  font-weight: bolder;
+  text-align: center;
+  width: 90%;
+}
+
+.slideshow__images__div {
+  position: relative;
+}
+.slideshow__images__div::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: black;
+  opacity: 0.7;
+}
+
+@media (max-width: 768px) {
+  .slideshow__text {
+    font-size: 2rem;
+    line-height: 4rem;
+  }
 }
